@@ -346,7 +346,7 @@
     </dependencies>
 
     <properties>
-        <jdk.version>13</jdk.version>
+        <jdk.version>15</jdk.version>
 
         <maven-toolchains-plugin.version>3.0.0</maven-toolchains-plugin.version>
         <maven-compiler-plugin.version>3.8.0</maven-compiler-plugin.version>
@@ -412,7 +412,7 @@
                 <configuration>
                     <toolchains>
                         <jdk>
-                            <version>[13,)</version>
+                            <version>15</version>
                         </jdk>
                     </toolchains>
                 </configuration>
@@ -424,10 +424,6 @@
                 <version>${maven-compiler-plugin.version}</version>
                 <configuration>
                     <release>${jdk.version}</release>
-
-                    <compilerArgs>
-                        <compilerArg>--enable-preview</compilerArg>
-                    </compilerArgs>
 
                     <annotationProcessorPaths>
                         <annotationProcessorPath>
@@ -445,7 +441,6 @@
                 <version>${maven-surefire-plugin.version}</version>
                 <configuration>
                     <argLine>-Xms1024m -Xmx1024m</argLine>
-                    <argLine>--enable-preview</argLine>
 
                     <systemPropertyVariables>
                         <bitronix.tm.journal.disk.logPart1Filename>${project.build.directory}/btm1.log</bitronix.tm.journal.disk.logPart1Filename>
